--- a/postcard.css
+++ b/postcard.css
@@ -254,9 +254,10 @@ svg
 .no-sound.playing {
   display: block;
 }
-@media only screen and (max-device-width: 900px) {
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) {
     .container {
-        position: fixed;
         top: 20px;
         left: 0;
         right: 0;
