--- a/postcard.css
+++ b/postcard.css
@@ -80,7 +80,8 @@ body
     display: flex;
     overflow: hidden;
 
-    width: 600px;
+    width: 85%;
+    max-width: 800px;
     min-height: 480px;
     margin: 3em auto;
 
@@ -244,7 +245,7 @@ svg
 .no-sound {
   position: absolute;
   right: 30px;
-  top: 0px;
+  top: -10px;
   fill: white;
   width: 30px;
   cursor: pointer;
@@ -254,17 +255,3 @@ svg
 .no-sound.playing {
   display: block;
 }
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) {
-    .container {
-        top: 20px;
-        left: 0;
-        right: 0;
-    }
-    .card {
-        width: 85%;
-        min-height: 240px;
-    }
-}
-
